--- a/ooxx_client/index.html
+++ b/ooxx_client/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
     <title>ooxx_client</title>
+    <!--<script type="text/javascript" src="https://cdn.bootcss.com/moment.js/2.22.1/moment.js"></script>-->
     <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
     <script>
       if ('addEventListener' in document) {
